--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,9 @@
 *.py[co]
-
-# Packages
-*.egg
 *.egg-info
-dist
-build
-eggs
-parts
-bin
-lib
-local
-include
-var
-sdist
-develop-eggs
-.installed.cfg
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-
-#Translations
-*.mo
-
-#Mr Developer
-.mr.developer.cfg
-
-#WingIDE
-*.wpr
-*.wpu
 
 #Sphinx
 .buildinfo
 _doctrees
 doctrees
+Makefile
+make.bat
